# hapticEnvironment

./: .autotools  .cproject  .project  CMakeLists.txt
common/: messageDefinitions.h
somebackupFiles/: cCup.cpp  cCup.h  cCupAndBall.cpp  cCupAndBall.h  cPendulum.cpp  cPendulum.h
src/combined/: cCST.cpp  cCST.h  cCupAndBall.cpp  cCupAndBall.h  cCups.cpp  cCups.h  combined.h
src/core/: controller.cpp  controller.h
src/graphics/: cGenericVisualEffect.cpp  cGenericVisualEffect.h  cMovingDots.cpp  cMovingDots.h  graphics.cpp  graphics.h
src/haptics/: cConstrainToLine.cpp  cEdgeStiffness.cpp  cEdgeStiffness.h  cImpulsePerturbation.cpp  cImpulsePerturbation.h  haptics.cpp  haptics.h
src/network/: cGenericStreamerObject.cpp  cGenericStreamerObject.h  listener.cpp  listener.h  network.cpp  network.h  streamer.cpp  streamer.h
